Bug 7182 - "Save Configuration to an Alternate File": backup file written one directory level beyond
Summary: "Save Configuration to an Alternate File": backup file written one directory ...
Status: CLOSED CODE_FIX
Alias: None
Product: Other
Classification: Unclassified
Component: Configuration (show other bugs)
Hardware: i386 Linux
: P2 normal
Assignee: Sam Ravnborg
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-09-22 02:03 UTC by Sebastian Kemper
Modified: 2006-10-08 12:25 UTC (History)
0 users

See Also:
Kernel Version: 2.6.18
Subsystem:
Regression: ---
Bisected commit-id:


Attachments

Description Sebastian Kemper 2006-09-22 02:03:13 UTC
Most recent kernel where this bug did not occur:2.6.17.x
Distribution: "Save Configuration to an Alternate File": backup file written 
one directory level beyond
Hardware Environment:x68
Software Environment:Gentoo Linux
Problem Description:When one saves the configuration a backup file is written 
called <name>.old. E.g. kernel is in /usr/src and you save the config 
to "../kconfig" the backup file is "/usr/src/kconfig.old". Not with 2.6.18: 
the backup file is "/usr/kconfig.old". It use "make menuconfig", didn't try 
xconfig or gconfig for instance.

Steps to reproduce:
Comment 1 Sebastian Kemper 2006-09-22 02:06:47 UTC
Sorry for the grammar and spelling. Here I go again.

Problem Description:When one saves the configuration a backup file is written 
called <name>.old. E.g. the kernel is in /usr/src/linux and you save the 
config to "../kconfig" the backup file is "/usr/src/kconfig.old". Not with 
2.6.18: the backup file is "/usr/kconfig.old". I use "make menuconfig", didn't 
try xconfig or gconfig.

Sebastian

Note You need to log in before you can comment on or make changes to this bug.